Some minor dark mode color bugfixes

--- a/fragments/sketchList/sketchList.css
+++ b/fragments/sketchList/sketchList.css
@@ -36,6 +36,7 @@
     width: 100%;
     height: auto;
     max-height: 150px;
+    background-color: #fff;
 }
 
 .list-icon-item {
